--- a/index.html
+++ b/index.html
@@ -223,5 +223,26 @@
       <div class="align-box"><h3>Item3</h3></div>
       <div class="align-box"><small>Item4</small></div>
     </div>
+    <h1>Perfect Center justify-content: center; align-items:center;</h1>
+    <div class="container" id="container22">
+      <div class="box">Item1</div>
+      <div class="box">Item2</div>
+      <div class="box">Item3</div>
+      <div class="box">Item4</div>
+    </div>
+    <h1>child order</h1>
+    <div class="container" id="container23">
+      <div class="box one">Item1</div>
+      <div class="box two">Item2</div>
+      <div class="box three">Item3</div>
+      <div class="box four">Item4</div>
+    </div>
+    <h1>flex-grow</h1>
+    <div class="container" id="container24">
+      <div class="box">Item1</div>
+      <div class="box grow">Item2</div>
+      <div class="box">Item3</div>
+      <div class="box grow">Item4</div>
+    </div>
   </body>
 </html>
