--- a/index.html
+++ b/index.html
@@ -244,5 +244,26 @@
       <div class="box">Item3</div>
       <div class="box grow">Item4</div>
     </div>
+    <h1>flex-shrink</h1>
+    <div class="container" id="container25">
+      <div class="box normal">Item1</div>
+      <div class="box shrink">Item2</div>
+      <div class="box normal">Item3</div>
+      <div class="box shrink">Item4</div>
+    </div>
+    <h1>flex-basis</h1>
+    <div class="container" id="container26">
+      <div class="box">Item1</div>
+      <div class="box">Item2</div>
+      <div class="box basis">Item3</div>
+      <div class="box">Item4</div>
+    </div>
+    <h1>flex</h1>
+    <div class="container" id="container27">
+      <div class="box">Item1</div>
+      <div class="box flex1">Item2</div>
+      <div class="box flex2">Item3</div>
+      <div class="box flex3">Item4</div>
+    </div>
   </body>
 </html>
